apps/makemkv/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        kubernetes.io/hostname: drone-04
      tolerations:
        - key: dedicated
          operator: Equal
          value: storage
          effect: NoSchedule
      securityContext:
        fsGroup: 1000
      volumes:
        - name: nas-media
          persistentVolumeClaim:
            claimName: nas-media
        - name: hooks
          configMap:
            name: hooks
            defaultMode: 0o777
        - name: sg0
          hostPath:
            path: /dev/sg0
        - name: sr0
          hostPath:
            path: /dev/sr0
        - name: sg2
          hostPath:
            path: /dev/sg2
        - name: sr1
          hostPath:
            path: /dev/sr1
      containers:
        - name: app
          image: jlesage/makemkv:v26.03.1@sha256:e2ab2c71f748cd504042706ec6323e22a34879eb9580a066dbcdf388f650feb0
          securityContext:
            privileged: true
          volumeMounts:
            - name: nas-media
              mountPath: /output
              subPath: Downloads
            - name: hooks
              mountPath: /config/hooks
            - name: sg0
              mountPath: /dev/sg0
            - name: sr0
              mountPath: /dev/sr0
            - name: sg2
              mountPath: /dev/sg2
            - name: sr1
              mountPath: /dev/sr1
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          ports:
            - name: http
              containerPort: 5800
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels: &labels
    app.kubernetes.io/component: app
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:apps
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts: [makemkv]
