apps/makemkv/makemkv.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/hostname: drone-04
      containers:
        - image: jlesage/makemkv:v26.01.2@sha256:4c114cfbd0ba7feef85c72d1721b8ea13a44ebc010b4996b644e618906e61717
          name: makemkv
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 5800
          volumeMounts:
            - name: nas-media
              mountPath: /output
              subPath: Downloads

            - name: sr0
              mountPath: /dev/sr0

            - name: sg1
              mountPath: /dev/sg1

            - name: sr1
              mountPath: /dev/sr1

            - name: sg2
              mountPath: /dev/sg2
      volumes:
        - name: sr0
          hostPath:
            path: /dev/sr0

        - name: sg1
          hostPath:
            path: /dev/sg1

        - name: sr1
          hostPath:
            path: /dev/sr1

        - name: sg2
          hostPath:
            path: /dev/sg2

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: internal
  tls:
    - hosts: [&host makemkv.beaver-cloud.xyz]
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web-service
                port:
                  name: http
